--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,6 @@
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <script src="https://cdn.tailwindcss.com"></script>
-
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700;900&display=swap");
       * {
@@ -36,9 +35,11 @@
   </script>
   <body class="bg-black text-gray-300 m-5">
     <section>
-      <h1 class="font-black text-2xl text-white underline">
-        AHMAD AKHUS SYUJ'AN
-      </h1>
+      <a href="https://xujaan.github.io">
+        <h1 class="font-black text-2xl text-white underline">
+          AHMAD AKHUS SYUJ'AN
+        </h1>
+      </a>
       <div class="text-blue-400 w-64 md:w-full">
         <a target="_blank" href="mailto:xujaan@pm.me">xujaan@pm.me</a> |
         <a target="_blank" href="https://github.com/xujaan"
